@@ -12734,6 +12734,7 @@ src/operator.h
 src/outputer.h
 src/population.h
 src/recombinator.h
+src/s_new.cpp
 src/selector.h
 src/simuMatPlt.py
 src/simuOpt.py
@@ -12808,33 +12809,24 @@ src/serialization/xml_oarchive.cpp
 src/serialization/xml_wgrammar.cpp
 src/serialization/xml_wiarchive.cpp
 src/serialization/xml_woarchive.cpp
-src/test/test.cpp
 test/test_00_carray.py
 test/test_01_individual.py
 test/test_02_population.py
-test/test_fstat.py
-test/test_gcontrol.py
-test/test_gendrift.py
-test/test_ifelse.py
-test/test_individual.py
-test/test_init.py
-test/test_leak.py
-test/test_mating.py
-test/test_migration.py
-test/test_misc.py
-test/test_mutationDriftEquilibrium.py
-test/test_mutator.py
-test/test_opPause.py
-test/test_operator.py
-test/test_param.py
-test/test_penetrance.py
-test/test_pyOperator.py
-test/test_recombination.py
-test/test_rng.py
-test/test_rplot.py
-test/test_sampling.py
-test/test_selection.py
-test/test_simulator.py
-test/test_stat.py
-test/test_tagging.py
-test/test_util.py
+test/test_03_operator.py
+test/test_04_simulator.py
+test/test_05_matings.py
+test/test_06_initialization.py
+test/test_07_tagging.py
+test/test_08_opStat.py
+test/test_09_pyOperator.py
+test/test_10_opIfElse.py
+test/test_11_opPause.py
+test/test_12_migration.py
+test/test_13_mutation.py
+test/test_14_recombination.py
+test/test_15_selection.py
+test/test_16_asertainment.py
+test/test_17_qtrait.py
+test/test_18_penetrance.py
+test/test_19_utility.py
+test/test_20_rpy.py
