@@ -36,6 +36,8 @@ version 0.6.12 - available as snapshot
   - NEW: (Almost) complete test cases for all operators.
   - CHG: remove sep parameter of operators. Users need separator between output of
          operators can use a output() operator manually. (sep is originally a bad idea.)
+  - NEW: (internal) Adapt the interface file and swig commands to SWIG 1.3.28.
+  - CHG: simuComplexDisease.py uses binary modules for SNP markers.
 
 version 0.6.11 - (Rev 119) - Jan 19, 2006
   - DOC: add examples of penetrance operators to the reference manual.
